doc/2.5/_sources/reference/generated/ak.nan_to_none.rst.txt
ak.nan_to_none
--------------

.. py:module: ak.nan_to_none

Defined in `awkward.operations.ak_nan_to_none <https://github.com/scikit-hep/awkward/blob/ee63f6ea8d2a687027967d738995a7df02dadc13/src/awkward/operations/ak_nan_to_none.py>`__ on `line 16 <https://github.com/scikit-hep/awkward/blob/ee63f6ea8d2a687027967d738995a7df02dadc13/src/awkward/operations/ak_nan_to_none.py#L16>`__.

.. py:function:: ak.nan_to_none(array, *, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Converts NaN ("not a number") into None, i.e. missing values with option-type.

See also :py:obj:`ak.nan_to_num` to convert NaN or infinity to specified values.

